--- a/css/style.css
+++ b/css/style.css
@@ -1335,8 +1335,11 @@ a.icon-blue {
   margin: 0px 0px 15px 0px;
 }
 
-.sidebar__box {
+.sidebar__subtitle {
+  font-size: 18px;
+  font-weight: bold;
   text-align: center;
+  margin: 0px 0px 15px 0px;
 }
 
 .sidebar__articles {
@@ -1422,16 +1425,16 @@ a.sidebar__link:hover {
 }
 
 .anim-scale {
-  -webkit-transition: all 0.8s ease 0.3s;
-  transition: all 0.8s ease 0.3s;
-  -webkit-transform: scale(0);
-          transform: scale(0);
+  -webkit-transition: all 0.8s ease .3s;
+  transition: all 0.8s ease .3s;
+  -webkit-transform: translateX(80%);
+          transform: translateX(80%);
   opacity: 0;
 }
 
 .anim-scale._active {
-  -webkit-transform: scale(1);
-          transform: scale(1);
+  -webkit-transform: translateX(0%);
+          transform: translateX(0%);
   opacity: 1;
 }
 
@@ -1528,6 +1531,8 @@ a.sidebar__link:hover {
 .courses {
   background: url(../img/courses-4.webp) center center/100% 100% no-repeat;
   padding: 100px 0 50px;
+  position: relative;
+  z-index: -5;
 }
 
 .assortiment__row {
@@ -1581,14 +1586,15 @@ a.sidebar__link:hover {
   border-radius: 10px;
   background: #fff;
   padding: 25px;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
+  -webkit-transition: 1s;
+  transition: 1s;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  position: relative;
 }
 
 .assortiment__item:hover {
@@ -1638,6 +1644,12 @@ a.sidebar__link:hover {
         -ms-flex: 0 0 90%;
             flex: 0 0 90%;
   }
+}
+
+.assortiment__top {
+  position: absolute;
+  left: 0;
+  top: -100px;
 }
 
 .assortiment__title {
@@ -1844,6 +1856,8 @@ a.sidebar__link:hover {
 
 .product {
   padding: 100px 0px 0px 0px;
+  position: relative;
+  z-index: -5;
   background: url(../img/shop-1.webp) center center/cover no-repeat;
 }
 
