--- a/css/style.scss
+++ b/css/style.scss
@@ -88,9 +88,15 @@ $color1: #098C02;
     margin: 0px 0px 15px 0px;
 }
 
+.sidebar__subtitle {
+    font-size: 18px;
+    font-weight: bold;
+    text-align: center;
+    margin: 0px 0px 15px 0px;
+}
 
 .sidebar__box {
-    text-align: center;
+    // text-align: center;
 }
 
 .sidebar__articles {
@@ -171,12 +177,14 @@ a.sidebar__link {
 }
 
 .anim-scale {
-    transition: all 0.8s ease 0.3s;
-    transform: scale(0);
+    transition: all 0.8s ease .3s;
+    // transform: scale(0);
+    transform: translateX(80%);
     opacity: 0;
 
     &._active {
-        transform: scale(1);
+        // transform: scale(1);
+        transform: translateX(0%);
         opacity: 1;
     }
 }
@@ -266,6 +274,8 @@ a.sidebar__link {
 .courses {
     background: url(../img/courses-4.webp) center center/ 100% 100% no-repeat;
     padding: 100px 0 50px;
+    position: relative;
+    z-index: -5;
 }
 
 .assortiment {
@@ -306,9 +316,10 @@ a.sidebar__link {
         border-radius: 10px;
         background: #fff;
         padding: 25px;
-        transition: 0.5s;
+        transition: 1s;
         display: flex;
         justify-content: center;
+        position: relative;
 
         &:hover {
             box-shadow: 0 6px 17px 10px #c1c6d6;
@@ -339,6 +350,12 @@ a.sidebar__link {
             flex: 0 0 90%;
         }
 
+    }
+
+    &__top {
+        position: absolute;
+        left: 0;
+        top: -100px;
     }
 
     // .assortiment__title
@@ -547,6 +564,8 @@ a.sidebar__link {
 
 .product {
     padding: 100px 0px 0px 0px;
+    position: relative;
+    z-index: -5;
     background: url(../img/shop-1.webp) center center/ cover no-repeat;
 }
 
