--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@ $color1: #098C02;
 @import "_nullstyle.scss";
 @import "_header.scss";
 @import "_articles.scss";
+@import "_price.scss";
 @import "_footer.scss";
 
 
@@ -95,9 +96,6 @@ $color1: #098C02;
     margin: 0px 0px 15px 0px;
 }
 
-.sidebar__box {
-    // text-align: center;
-}
 
 .sidebar__articles {
     margin: 30px 0px 0px 0px;
