--- a/css/_price.scss
+++ b/css/_price.scss
@@ -12,6 +12,17 @@ td {
     padding: 10px;
 }
 
+.price__title {
+    font-size: 44px;
+    margin: 20px 0px 0px 0px;
+    color: $color1;
+    text-align: center;
+
+    @media (max-width: 600px) {
+        font-size: 34px;
+    }
+}
+
 .table__title {
     text-align: center;
     font-size: 26px;
@@ -61,6 +72,7 @@ td {
         border-bottom: none;
     }
 
+
     // .table__box-row
 
     &__box-row {
@@ -80,6 +92,11 @@ td {
         border-bottom: none;
         flex-grow: 1;
 
+        &--last {
+            border-bottom: 1px solid black;
+        }
+
+
         @media (max-width: 767px) {
             font-size: 14px;
             line-height: 16px;
@@ -97,6 +114,10 @@ td {
         border-top: 1px solid black;
         border-right: 1px solid black;
         height: auto;
+
+        &--last {
+            border-bottom: 1px solid black;
+        }
 
         @media (max-width: 767px) {
             font-size: 12px;
