--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ body {
   top: 0;
   left: 0;
   width: 100%;
-  z-index: 10;
+  z-index: 999;
   /* bg шапки в desctop */
 }
 
@@ -1060,10 +1060,11 @@ a.icon-blue {
 .articles__image {
   text-align: center;
   margin: 0px 0px 5px 0px;
+  width: 100%;
 }
 
 .articles__img {
-  max-width: 500px;
+  max-width: 100%;
 }
 
 .articles__images {
@@ -1235,6 +1236,496 @@ td {
   .table__box-price {
     width: 100px;
   }
+}
+
+.questions__title {
+  font-size: 44px;
+  margin: 20px 0px 20px 0px;
+  color: #098C02;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .questions__title {
+    font-size: 34px;
+  }
+}
+
+.accordion {
+  margin: 0 auto;
+  height: 100%;
+  padding: 0 20px;
+  max-width: 1000px;
+}
+
+.accordion__images {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: 30px 0px 0px 0px;
+}
+
+.accordion__image {
+  width: 300px;
+}
+
+.accordion__img {
+  max-width: 100%;
+}
+
+.accordion__item {
+  color: #5D5D5D;
+  -webkit-box-shadow: 0 0 12px -5px #1d1d1d;
+          box-shadow: 0 0 12px -5px #1d1d1d;
+  border-radius: 15px;
+  padding: 20px 40px;
+  margin-bottom: 20px;
+  max-height: auto;
+  overflow: hidden;
+  -webkit-transition: all 0.4s 0s;
+  transition: all 0.4s 0s;
+  cursor: pointer;
+  /* height: 100%; */
+}
+
+@media (max-width: 550px) {
+  .accordion__item {
+    padding: 15px 20px;
+  }
+}
+
+.accordion__item-content {
+  max-height: 0;
+  overflow: hidden;
+  -webkit-transition: all 0.4s 0s;
+  transition: all 0.4s 0s;
+}
+
+.accordion__item-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.accordion__item-title {
+  font-size: 18px;
+  line-height: 25px;
+}
+
+@media (max-width: 550px) {
+  .accordion__item-title {
+    font-size: 16px;
+    line-height: 20px;
+  }
+}
+
+.accordion__text {
+  font-size: 16px;
+  line-height: 27px;
+  margin: 30px 0 20px;
+}
+
+.reviews__container {
+  max-width: 1300px;
+  margin: 0 auto;
+  padding: 0 15px;
+}
+
+@media (max-width: 1400px) {
+  .reviews__container {
+    max-width: 1200px;
+  }
+}
+
+@media (max-width: 1250px) {
+  .reviews__container {
+    max-width: 95%;
+  }
+}
+
+@media (max-width: 990px) {
+  .reviews__container {
+    max-width: 100%;
+  }
+}
+
+.reviews__title-title {
+  font-size: 44px;
+  margin: 20px 0px 20px 0px;
+  color: #098C02;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .reviews__title-title {
+    font-size: 34px;
+  }
+}
+
+.reviews__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.reviews__item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 48%;
+          flex: 0 0 48%;
+  -webkit-box-shadow: 0 6px 20px 10px #EBEEF8;
+          box-shadow: 0 6px 20px 10px #EBEEF8;
+  border-radius: 10px;
+  background: #fff;
+  padding: 25px;
+  margin: 0px 0px 20px 0px;
+  -webkit-transition: 1s;
+  transition: 1s;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  position: relative;
+}
+
+.reviews__item:hover {
+  -webkit-box-shadow: 0 6px 17px 10px #c1c6d6;
+          box-shadow: 0 6px 17px 10px #c1c6d6;
+}
+
+@media (max-width: 990px) {
+  .reviews__item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    padding: 20px;
+  }
+}
+
+@media (max-width: 500px) {
+  .reviews__item {
+    padding: 15px;
+  }
+}
+
+.reviews__body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.reviews__title {
+  font-size: 18px;
+  font-weight: 800;
+  color: #222;
+  margin: 0px 0px 20px 0px;
+  text-align: center;
+}
+
+@media (max-width: 990px) {
+  .reviews__title {
+    font-size: 16px;
+  }
+}
+
+.reviews__text {
+  color: #5a4f4f;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 990px) {
+  .reviews__text {
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
+
+@media (max-width: 480px) {
+  .reviews__text {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+
+.reviews__name {
+  font-size: 18px;
+  color: #494747;
+  font-style: italic;
+}
+
+@media (max-width: 990px) {
+  .reviews__name {
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
+
+@media (max-width: 480px) {
+  .reviews__name {
+    font-size: 14px;
+    line-height: 16px;
+  }
+}
+
+.about__title {
+  font-size: 44px;
+  margin: 20px 0px 20px 0px;
+  color: #098C02;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .about__title {
+    font-size: 34px;
+  }
+}
+
+.about__row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media (max-width: 550px) {
+  .about__row {
+    display: block;
+  }
+}
+
+.about__image {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 400px;
+          flex: 0 1 400px;
+  text-align: center;
+  margin: 0px 0px 25px 0px;
+}
+
+.about__img {
+  max-width: 100%;
+}
+
+@media (max-width: 550px) {
+  .about__img {
+    max-width: 250px;
+  }
+}
+
+.about__right {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 90%;
+          flex: 1 1 90%;
+  padding: 0px 0px 0px 50px;
+}
+
+@media (max-width: 700px) {
+  .about__right {
+    padding: 0px 0px 0px 25px;
+  }
+}
+
+@media (max-width: 700px) {
+  .about__right {
+    padding: 0px 0px 0px 0px;
+  }
+}
+
+.about__text {
+  font-size: 22px;
+  line-height: 26px;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 1200px) {
+  .about__text {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
+@media (max-width: 700px) {
+  .about__text {
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
+
+.about__point {
+  font-size: 22px;
+  line-height: 26px;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 1200px) {
+  .about__point {
+    font-size: 18px;
+    line-height: 22px;
+  }
+}
+
+@media (max-width: 700px) {
+  .about__point {
+    font-size: 16px;
+    line-height: 18px;
+  }
+}
+
+.important__title {
+  font-size: 44px;
+  margin: 20px 0px 20px 0px;
+  color: #098C02;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .important__title {
+    font-size: 34px;
+  }
+}
+
+.important__text, .important__point {
+  font-size: 18px;
+  line-height: 22px;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 500px) {
+  .important__text, .important__point {
+    font-size: 14px;
+  }
+}
+
+.important__bold {
+  font-size: 22px;
+  font-weight: bold;
+  margin: 20px 0px 20px 0px;
+}
+
+@media (max-width: 500px) {
+  .important__bold {
+    font-size: 18px;
+    margin: 10px 0px 10px 0px;
+  }
+}
+
+.important__image {
+  text-align: center;
+  margin: 40px 0px 0px 0px;
+}
+
+.important__img {
+  max-width: 100%;
+}
+
+.achievements__title-title.documents {
+  color: #000;
+}
+
+.contract__title {
+  font-size: 44px;
+  margin: 20px 0px 20px 0px;
+  color: #098C02;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .contract__title {
+    font-size: 34px;
+  }
+}
+
+.contract__item-title {
+  font-size: 22px;
+  font-weight: bold;
+  margin: 20px 0px 20px 0px;
+}
+
+@media (max-width: 500px) {
+  .contract__item-title {
+    font-size: 18px;
+    margin: 10px 0px 10px 0px;
+  }
+}
+
+.contract__text {
+  font-size: 18px;
+  line-height: 22px;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 500px) {
+  .contract__text {
+    font-size: 14px;
+  }
+}
+
+.delivery__title {
+  font-size: 44px;
+  margin: 20px 0px 20px 0px;
+  color: #098C02;
+  text-align: center;
+}
+
+@media (max-width: 600px) {
+  .delivery__title {
+    font-size: 34px;
+  }
+}
+
+.delivery__text {
+  font-size: 22px;
+  font-weight: bold;
+  margin: 20px 0px 20px 0px;
+}
+
+@media (max-width: 500px) {
+  .delivery__text {
+    font-size: 18px;
+    margin: 10px 0px 10px 0px;
+  }
+}
+
+.delivery__point {
+  font-size: 18px;
+  line-height: 22px;
+  margin: 0px 0px 10px 0px;
+}
+
+@media (max-width: 500px) {
+  .delivery__point {
+    font-size: 14px;
+  }
+}
+
+a.delivery__link {
+  color: black;
 }
 
 .footer {
@@ -1479,6 +1970,8 @@ td {
       -ms-flex: 0 0 50px;
           flex: 0 0 50px;
   height: 100%;
+  position: relative;
+  z-index: 2;
   background: #10E606;
 }
 
@@ -1544,11 +2037,12 @@ a.sidebar__link:hover {
 
 .achievements__title {
   position: relative;
-  z-index: 999;
+  z-index: 1;
 }
 
 .achievements__title-title {
   color: #fff;
+  z-index: -1;
 }
 
 .title {
@@ -1620,6 +2114,8 @@ a.sidebar__link:hover {
   -webkit-transform: translate(0, 50%);
           transform: translate(0, 50%);
   opacity: 0;
+  width: 90%;
+  margin: 0px auto;
 }
 
 @media (max-width: 990px) {
@@ -1640,8 +2136,11 @@ a.sidebar__link:hover {
   position: relative;
 }
 
-.image-slider {
+.image-slider,
+.image-slider-2,
+.image-slider-3 {
   overflow: hidden;
+  margin: 20px 0px 0px 0px;
 }
 
 .image-slider__image {
@@ -1657,6 +2156,10 @@ a.sidebar__link:hover {
   .image-slider__image img {
     max-width: 90%;
   }
+}
+
+.slider__box {
+  position: relative;
 }
 
 /* Стрелки */
@@ -1682,11 +2185,35 @@ a.sidebar__link:hover {
   font-weight: bold;
 }
 
+.swiper-button-prev-2,
+.swiper-button-next-2,
+.swiper-button-prev-3,
+.swiper-button-next-3 {
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%);
+  top: 50%;
+  z-index: 15;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+}
+
+.swiper-button-prev-2,
+.swiper-button-prev-3 {
+  left: -35px;
+  background: url(../img/icon/arrows-l.webp) 0 0/100% 100% no-repeat;
+}
+
+.swiper-button-next-2,
+.swiper-button-next-3 {
+  right: -35px;
+  background: url(../img/icon/arrows-ri.webp) 0 0/100% 100% no-repeat;
+}
+
 .courses {
   background: url(../img/courses-4.webp) center center/100% 100% no-repeat;
   padding: 100px 0 50px;
   position: relative;
-  z-index: -5;
 }
 
 .assortiment__row {
@@ -2009,18 +2536,17 @@ a.sidebar__link:hover {
 }
 
 .product {
-  padding: 100px 0px 0px 0px;
+  padding: 70px 0px 0px 30px;
   position: relative;
-  z-index: -5;
   background: url(../img/shop-1.webp) center center/cover no-repeat;
 }
 
 .related {
-  padding: 100px 0px 0px 0px;
+  padding: 70px 0px 0px 30px;
 }
 
 .services {
-  padding: 100px 0px 0px 0px;
+  padding: 70px 0px 0px 30px;
 }
 
 .overlay {
@@ -2162,7 +2688,7 @@ a.sidebar__link:hover {
   height: 100%;
   -webkit-box-shadow: 0 0 30px 2px white;
           box-shadow: 0 0 30px 2px white;
-  background: url(../img/bg.webp) center center/cover no-repeat;
+  background: white url(../img/bg.webp) center center/cover no-repeat;
 }
 
 .popup__title {
@@ -2207,6 +2733,54 @@ a.sidebar__link:hover {
 .popup .close:after {
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg);
+}
+
+#popup-consultation .popup.open {
+  opacity: 1;
+  visibility: visible;
+}
+
+#popup-consultation.popup.open .popup__content {
+  -webkit-transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+          transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+  opacity: 1;
+}
+
+#popup-consultation .popup__content {
+  max-width: 600px;
+  height: 400px;
+  color: #000;
+  padding: 30px;
+  position: relative;
+  z-index: 5;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: all 0.8s ease 0s;
+  transition: all 0.8s ease 0s;
+  -webkit-transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+          transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+}
+
+#popup-consultation .forms__row {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+#popup-consultation .popup__forms {
+  width: 100%;
 }
 
 .popup__body {
@@ -2268,6 +2842,11 @@ a.sidebar__link:hover {
 
 #popup-consultation .form__text-last {
   margin: 0 0px 0px;
+}
+
+.form__textarea {
+  margin: 10px 0px 10px;
+  color: #fff;
 }
 
 .form__text._error {
