--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,13 @@ $color1: #098C02;
 @import "_header.scss";
 @import "_articles.scss";
 @import "_price.scss";
+@import "_questions.scss";
+@import "_reviews.scss";
+@import "_about.scss";
+@import "_important.scss";
+@import "_documents.scss";
+@import "_contract.scss";
+@import "_delivery.scss";
 @import "_footer.scss";
 
 
@@ -78,6 +85,8 @@ $color1: #098C02;
 .sidebar__border {
     flex: 0 0 50px;
     height: 100%;
+    position: relative;
+    z-index: 2;
     // @extend %gradient;
     background: #10E606;
 }
@@ -145,11 +154,12 @@ a.sidebar__link {
 
 .achievements__title {
     position: relative;
-    z-index: 999;
+    z-index: 1;
 }
 
 .achievements__title-title {
     color: #fff;
+    z-index: -1;
 }
 
 .title {
@@ -209,6 +219,8 @@ a.sidebar__link {
     transition: all 0.8s ease 0.3s;
     transform: translate(0, 50%);
     opacity: 0;
+    width: 90%;
+    margin: 0px auto;
 
     @media (max-width: 990px) {
         width: 90%;
@@ -226,8 +238,11 @@ a.sidebar__link {
     position: relative;
 }
 
-.image-slider {
+.image-slider,
+.image-slider-2,
+.image-slider-3 {
     overflow: hidden;
+    margin: 20px 0px 0px 0px;
 }
 
 .image-slider__image {
@@ -245,12 +260,84 @@ a.sidebar__link {
     }
 }
 
+.slider__box {
+    position: relative;
+}
+
+// /* Стрелки */
+// .swiper-button-prev,
+// .swiper-button-next {
+//     transform: translateY(-50%);
+//     z-index: 15;
+// }
+
+// .swiper-button-prev {
+//     left: -35px;
+// }
+
+// .swiper-button-next {
+//     right: -35px;
+// }
+
+// .swiper-button-prev::after,
+// .swiper-button-next::after {
+//     color: #8E8E8E;
+//     font-size: 30px;
+//     font-weight: bold;
+// }
+
+// .swiper-button-prev-2,
+// .swiper-button-next-2,
+// .swiper-button-prev-3,
+// .swiper-button-next-3 {
+//     position: absolute;
+//     width: 45px;
+//     height: 45px;
+//     top: 50%;
+//     transform: translateY(-50%);
+//     left: 0;
+// }
+
+// .swiper-button-prev-2::after,
+// .swiper-button-next-2::after,
+// .swiper-button-prev-3::after,
+// .swiper-button-next-3::after {
+//     position: absolute;
+//     // top: 0;
+//     // transform: translateY(-50%);
+//     // left: 0;
+//     width: 45px;
+//     height: 45px;
+//     content: "";
+//     // background: red;
+// }
+
+// .swiper-button-prev-2 {
+//     left: -35px;
+// }
+
+// .swiper-button-next-2 {
+//     left: -350px;
+// }
+
+// .swiper-button-prev-2::after,
+// .swiper-button-prev-3::after {
+
+//     background: url(../img/icon/arrows-l.webp) 0 0/ 100% 100% no-repeat;
+// }
+
+// .swiper-button-next-2::after,
+// .swiper-button-next-3::after {
+
+//     background: url(../img/icon/arrows-ri.webp) 0 0/ 100% 100% no-repeat;
+// }
 /* Стрелки */
 .swiper-button-prev,
 .swiper-button-next {
     transform: translateY(-50%);
     z-index: 15;
 }
+
 
 .swiper-button-prev {
     left: -35px;
@@ -260,20 +347,43 @@ a.sidebar__link {
     right: -35px;
 }
 
+
 .swiper-button-prev::after,
 .swiper-button-next::after {
     color: #8E8E8E;
     font-size: 30px;
     font-weight: bold;
-
 }
 
+.swiper-button-prev-2,
+.swiper-button-next-2,
+.swiper-button-prev-3,
+.swiper-button-next-3 {
+    transform: translateY(-50%);
+    top: 50%;
+    z-index: 15;
+    width: 50px;
+    height: 50px;
+    // background: red;
+    position: absolute;
+}
+
+.swiper-button-prev-2,
+.swiper-button-prev-3 {
+    left: -35px;
+    background: url(../img/icon/arrows-l.webp) 0 0 / 100% 100% no-repeat;
+}
+
+.swiper-button-next-2,
+.swiper-button-next-3 {
+    right: -35px;
+    background: url(../img/icon/arrows-ri.webp) 0 0 / 100% 100% no-repeat;
+}
 
 .courses {
     background: url(../img/courses-4.webp) center center/ 100% 100% no-repeat;
     padding: 100px 0 50px;
     position: relative;
-    z-index: -5;
 }
 
 .assortiment {
@@ -561,18 +671,17 @@ a.sidebar__link {
 
 
 .product {
-    padding: 100px 0px 0px 0px;
+    padding: 70px 0px 0px 30px;
     position: relative;
-    z-index: -5;
     background: url(../img/shop-1.webp) center center/ cover no-repeat;
 }
 
 .related {
-    padding: 100px 0px 0px 0px;
+    padding: 70px 0px 0px 30px;
 }
 
 .services {
-    padding: 100px 0px 0px 0px;
+    padding: 70px 0px 0px 30px;
 }
 
 .overlay {
@@ -699,7 +808,7 @@ a.sidebar__link {
         width: 100%;
         height: 100%;
         box-shadow: 0 0 30px 2px white;
-        background: url(../img/bg.webp) center center/ cover no-repeat;
+        background: white url(../img/bg.webp) center center/ cover no-repeat;
     }
 
     &__title {
@@ -742,6 +851,40 @@ a.sidebar__link {
             transform: rotate(-45deg);
         }
     }
+}
+
+
+#popup-consultation .popup.open {
+    opacity: 1;
+    visibility: visible;
+}
+
+#popup-consultation.popup.open .popup__content {
+    transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
+    opacity: 1;
+}
+
+#popup-consultation .popup__content {
+    max-width: 600px;
+    height: 400px;
+    color: #000;
+    padding: 30px;
+    position: relative;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.8s ease 0s;
+    transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+}
+
+#popup-consultation .forms__row {
+    flex-direction: column;
+}
+
+#popup-consultation .popup__forms {
+    width: 100%;
 }
 
 .popup__body {
@@ -799,9 +942,10 @@ a.sidebar__link {
     margin: 0 0px 0px;
 }
 
-// .form__textarea {
-//     margin: 10 0px 10px;
-// }
+.form__textarea {
+    margin: 10px 0px 10px;
+    color: #fff;
+}
 
 .form__text._error {
     box-shadow: 0 0 15px red;
