--- a/css/style.scss
+++ b/css/style.scss
@@ -264,73 +264,6 @@ a.sidebar__link {
     position: relative;
 }
 
-// /* Стрелки */
-// .swiper-button-prev,
-// .swiper-button-next {
-//     transform: translateY(-50%);
-//     z-index: 15;
-// }
-
-// .swiper-button-prev {
-//     left: -35px;
-// }
-
-// .swiper-button-next {
-//     right: -35px;
-// }
-
-// .swiper-button-prev::after,
-// .swiper-button-next::after {
-//     color: #8E8E8E;
-//     font-size: 30px;
-//     font-weight: bold;
-// }
-
-// .swiper-button-prev-2,
-// .swiper-button-next-2,
-// .swiper-button-prev-3,
-// .swiper-button-next-3 {
-//     position: absolute;
-//     width: 45px;
-//     height: 45px;
-//     top: 50%;
-//     transform: translateY(-50%);
-//     left: 0;
-// }
-
-// .swiper-button-prev-2::after,
-// .swiper-button-next-2::after,
-// .swiper-button-prev-3::after,
-// .swiper-button-next-3::after {
-//     position: absolute;
-//     // top: 0;
-//     // transform: translateY(-50%);
-//     // left: 0;
-//     width: 45px;
-//     height: 45px;
-//     content: "";
-//     // background: red;
-// }
-
-// .swiper-button-prev-2 {
-//     left: -35px;
-// }
-
-// .swiper-button-next-2 {
-//     left: -350px;
-// }
-
-// .swiper-button-prev-2::after,
-// .swiper-button-prev-3::after {
-
-//     background: url(../img/icon/arrows-l.webp) 0 0/ 100% 100% no-repeat;
-// }
-
-// .swiper-button-next-2::after,
-// .swiper-button-next-3::after {
-
-//     background: url(../img/icon/arrows-ri.webp) 0 0/ 100% 100% no-repeat;
-// }
 /* Стрелки */
 .swiper-button-prev,
 .swiper-button-next {
@@ -854,19 +787,21 @@ a.sidebar__link {
 }
 
 
-#popup-consultation .popup.open {
+#popup-consultation .popup.open,
+#popup-write .popup.open {
     opacity: 1;
     visibility: visible;
 }
 
-#popup-consultation.popup.open .popup__content {
+#popup-consultation.popup.open .popup__content,
+#popup-write.popup.open .popup__content {
     transform: perspective(600px) translate(0px, 0%) rotateX(0deg);
     opacity: 1;
 }
 
 #popup-consultation .popup__content {
     max-width: 600px;
-    height: 400px;
+    height: 500px;
     color: #000;
     padding: 30px;
     position: relative;
@@ -877,14 +812,41 @@ a.sidebar__link {
     align-items: center;
     transition: all 0.8s ease 0s;
     transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+
+    @media (max-width: 416px) {
+        height: 450px;
+    }
 }
 
-#popup-consultation .forms__row {
+#popup-consultation .forms__row,
+#popup-write .forms__row {
     flex-direction: column;
 }
 
-#popup-consultation .popup__forms {
+#popup-consultation .popup__forms,
+#popup-write .popup__forms {
     width: 100%;
+}
+
+
+
+#popup-write .popup__content {
+    width: 600px;
+    height: 450px;
+    color: #000;
+    padding: 30px;
+    position: relative;
+    z-index: 5;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all 0.8s ease 0s;
+    transform: perspective(600px) translate(0px, -100%) rotateX(45deg);
+
+    @media (max-width: 416px) {
+        height: 450px;
+    }
 }
 
 .popup__body {
@@ -931,20 +893,32 @@ a.sidebar__link {
     background-color: rgba(255, 255, 255, 0);
 }
 
-#popup-consultation .form__text {
+#popup-consultation .popup__title,
+#popup-write .popup__title {
+    margin: 0px 0px 0.5em 0px;
+}
+
+#popup-consultation .form__text,
+#popup-write .form__text {
     font-size: 17px;
     margin: 0 0px 20px;
     color: white;
     background-color: rgba(255, 255, 255, 0);
 }
 
-#popup-consultation .form__text-last {
+#popup-consultation .form__text-last,
+#popup-write .form__text-last {
     margin: 0 0px 0px;
 }
 
 .form__textarea {
     margin: 10px 0px 10px;
     color: #fff;
+}
+
+textarea {
+    margin: 0px 0px 15px 0px;
+    font-size: 18px;
 }
 
 .form__text._error {
